# multi-exchanges-trading-bot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  QUICK_START.md  README.md  SECURITY.md  __init__.py  cli.py  config_manager.py  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  env.example  env_example.txt  main.py  pyproject.toml  pytest.ini  requirements.txt  requirements_hummingbot.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-test.yml  release.yml  version-bump.yml
bots/: __init__.py  multi_exchange_bot.py  risk_manager.py
bots/core/: __init__.py
bots/examples/: __init__.py  mqtt_client_example.py
bots/interfaces/: __init__.py
bots/managers/: __init__.py  hummingbot_manager.py
bots/strategies/: __init__.py  macd_bot.py
bots/templates/: dashboard.html
bots/utils/: __init__.py  crypto_scanner.py  monitor.py
config/: config.template.json  config_hummingbot.json  mosquitto.conf  prometheus.yml
config/nginx/: nginx.conf
dashboard/: main.py  requirements.txt
dashboard/frontend/: package.json
dashboard/frontend/src/: App.js
dashboard/frontend/src/components/: Dashboard.js  Login.js
docs/: CONFIG_MANAGEMENT.md  INSTALLATION.md  README.md
docs/configuration/: README.md  configuration-guide.md  hummingbot-mqtt-setup.md
docs/development/: README.md  api-documentation.md  project-structure.md  testing-guide.md
docs/getting-started/: README.md
docs/operations/: README.md  docker-compose-guide.md  faq.md  temp-folder-migration.md
docs/release-notes/: README.md  changelog.md  upgrade-summary.md
docs/user-guides/: README.md  cli-commands.md  crypto-scanner-guide.md  scanner-examples.md  user-guide.md
examples/: basic_usage.py  crypto_scanner_example.py
scripts/: init-db.sql
secrets/: n8n_encryption_key.txt  n8n_password.txt
src/: __init__.py
src/core/: __init__.py  exchange_manager.py  market_analyzer.py
src/examples/: __init__.py
src/interfaces/: __init__.py
src/managers/: __init__.py
src/strategies/: __init__.py
src/utils/: __init__.py
tests/: README.md  __init__.py  conftest.py  test_exchange_manager.py  test_market_analyzer.py  test_multi_exchange_bot.py
tests/integration/: __init__.py  test_hummingbot_manager.py  test_hummingbot_simple.py  test_mqtt_client.py
tests/performance/: __init__.py  test_order_processing.py
tests/security/: __init__.py  test_api_key_security.py
tests/unit/test_core/: test_config_manager.py  test_risk_manager.py
tests/unit/test_strategies/: test_macd_bot.py
tests/unit/test_utils/: test_crypto_scanner.py  test_monitor.py
